# Opencv_Learning_Notes

./: CMakeLists.txt  time.csv
0_Example_CMake/: CMakeLists.txt  example.cpp
10_Video/: CMakeLists.txt  bg_sub.cpp
13_ShapeDescriptors/: CMakeLists.txt  findContours_demo.cpp  generalContours_demo1.cpp  generalContours_demo2.cpp  hull_demo.cpp  moments_demo.cpp  pointPolygonTest_demo.cpp
14_Compatibility/: compatibility_test.cpp
1_Introduction/: CMakeLists.txt  display_image.cpp  introduction_windows_vs.cpp
1_Introduction/file_input_output/: file_input_output.cpp
1_Introduction/mat_the_basic_image_container/: mat_the_basic_image_container.cpp
20_Other_Demo/: application_trace.cpp  stitching.cpp  stitching_detailed.cpp
2_ImgProc/: BasicLinearTransforms.cpp  CMakeLists.txt  Morphology_1.cpp  Morphology_2.cpp  Threshold.cpp
2_ImgProc/Smoothing/: Smoothing.cpp
2_ImgProc/anisotropic_image_segmentation/: anisotropic_image_segmentation.cpp
2_ImgProc/basic_drawing/: Drawing_1.cpp  Drawing_2.cpp
2_ImgProc/morph_lines_detection/: Morphology_3.cpp
2_ImgProc/periodic_noise_removing_filter/: periodic_noise_removing_filter.cpp
3_ImgTrans/: CMakeLists.txt  CannyDetector_Demo.cpp  Geometric_Transforms_Demo.cpp  HoughCircle_Demo.cpp  HoughLines_Demo.cpp  Laplace_Demo.cpp  Remap_Demo.cpp  Sobel_Demo.cpp  filter2D_demo.cpp  houghcircles.cpp  houghlines.cpp  imageSegmentation.cpp
8_Histograms_Matching/: CMakeLists.txt  EqualizeHist_Demo.cpp  MatchTemplate_Demo.cpp
Python/Automatic-Document-Scanner/: app.py  grabcut-scan.py  simple-scan.py
Python/sample_code/: peopledetect (2).py  peopledetect.py
Python/tutorial_code/core/mat_mask_operations/: mat_mask_operations.py
Sources/cv/robot_world_hand_eye_calibration/: README_input_format.txt.txt
Sources/dnn/gsoc2016-goturn/: README.md
